--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "build": "snowpack build",
     "test": "yarn lint",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css,scss,html}\"",
-    "lint": "prettier --check \"**/*.{js,jsx,ts,tsx,css,scss,html}\""
+    "lint": "prettier --check \"**/*.{js,jsx,ts,tsx,css,scss,html}\"",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.12.13",
@@ -39,6 +40,7 @@
     "@snowpack/plugin-postcss": "^1.1.0",
     "@snowpack/plugin-sass": "^1.3.0",
     "autoprefixer": "^10.2.5",
+    "husky": "^5.1.3",
     "prettier": "^2.2.1",
     "prism-react-renderer": "^1.2.0",
     "react": "^17.0.1",
