--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.html",
   "license": "MIT",
   "description": "Template to genenerate a React GitHub page from a readme file.",
-  "baseUrl": "gh-pages-templates",
+  "baseUrl": "/gh-pages-templates/",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/synx-ai/gh-pages-template"
