--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.html",
   "license": "MIT",
   "description": "Template to genenerate a React GitHub page from a readme file.",
-  "baseUrl": "/gh-pages-templates/",
+  "baseUrl": "/gh-pages-template/",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/synx-ai/gh-pages-template"
@@ -39,6 +39,7 @@
     "@snowpack/plugin-babel": "^2.1.6",
     "@snowpack/plugin-postcss": "^1.1.0",
     "@snowpack/plugin-sass": "^1.3.0",
+    "@snowpack/plugin-webpack": "^2.3.0",
     "autoprefixer": "^10.2.5",
     "husky": "^5.1.3",
     "prettier": "^2.2.1",
