--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "start": "snowpack dev",
-    "build": "snowpack build",
+    "build": "snowpack build --clean",
     "test": "yarn lint",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css,scss,html}\"",
     "lint": "prettier --check \"**/*.{js,jsx,ts,tsx,css,scss,html}\"",
@@ -48,5 +48,6 @@
     "react-dom": "^17.0.1",
     "snowpack": "^3.0.13",
     "snowpack-plugin-mdx": "^0.3.1"
-  }
+  },
+  "dependencies": {}
 }
